# leptos-web-sys-file-reading

./: Cargo.toml  LICENSE.txt  README.md  index.html
src/: main.rs
