[package]
name = "files"
version = "0.1.0"
edition = "2021"


[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.6.14", features = ["csr", "nightly"] }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = [
    "File",
    "FileList",
    "FileReader",
    "HtmlInputElement",
    "Document",
    "Window",
    "console",
] }
